--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -6,8 +6,8 @@
         <div class="container-fluid">
             <div class="row">
                 
-                <div class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                    <div class="pagetitle">
+                 <div class="col-md-12">
+                    <div class="pagetitle mb-4">
                         <h1>Votre commande</h1>
                         <nav>
                             <ol class="breadcrumb">
@@ -21,7 +21,7 @@
                     <section class="section">
                         <div class="row justify-content-center">
                             <div class="col-lg-12">
-                                <div class="card shadow-lg p-12">
+                                <div class="card shadow-lg ">
                                     <div class="card-body text-start"> <!-- Utilisation de text-start pour aligner le texte à gauche -->
                                         {% for message in app.flashes('notice') %}
                                             <div class="alert alert-success bg-success text-light border-0 alert-dismissible fade show" role="alert">
@@ -78,6 +78,7 @@
                                                                 <td class="d-flex align-items-center">
                                                                     <a href="{{ path('modifier_commande',{idc:commande.idc}) }}" class="btn btn-sm btn-primary me-2">Modifier</a>
                                                                     <a href="#" onclick="if(confirm('Voulez-vous vraiment supprimer ?')) { window.location='{{ path('supprimerCommande', {'idc': commande.idc}) }}'; }" class="btn btn-sm btn-danger">Supprimer</a>
+                                                                    <a href="{{ path('contrat_generate_pdf', {'idc': commande.idc}) }}" class="btn btn-sm btn-primary me-2">Générer PDF</a>
                                                                 </td>
                                                             </tr>
                                                         {% endfor %}
@@ -94,12 +95,13 @@
                                                 <button type="submit" class="btn btn-primary">Rechercher</button>
                                             </div>
                                         </form>
+                                        
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </section>
-                      <div id="searchResults" class="mt-3">
+                                     <div id="searchResults" class="mt-3">
                                         <script>
                                             $(document).ready(function() {
                                                 $('#searchInput').on('input', function() {
@@ -123,7 +125,7 @@
                                                 });
                                             });
                                         </script>
-                </div>
+                                     </div>
             </div>
         </div>
     </main>
