--- a/templates/events/_delete_form.html.twig
+++ b/templates/events/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_events_delete', {'id': event.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ event.id) }}">
+<form method="post" action="{{ path('app_events_delete', {'id': event.id_event}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ event.id_event) }}">
     <button class="btn">Delete</button>
 </form>
