--- a/templates/events/show.html.twig
+++ b/templates/events/show.html.twig
@@ -9,7 +9,7 @@
         <tbody>
             <tr>
                 <th>Id</th>
-                <td>{{ event.id }}</td>
+                <td>{{ event.id_event }}</td>
             </tr>
             <tr>
                 <th>Nom</th>
@@ -32,7 +32,7 @@
 
     <a href="{{ path('app_events_index') }}">back to list</a>
 
-    <a href="{{ path('app_events_edit', {'id': event.id}) }}">edit</a>
+    <a href="{{ path('app_events_edit', {'id': event.id_event}) }}">edit</a>
 
     {{ include('events/_delete_form.html.twig') }}
 {% endblock %}
