--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{{asset('vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
-
+    <meta http-equiv="Content-Security-Policy" content="frame-src 'self' https://www.youtube.com;">
+    
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="{{asset('assets/css/fontawesome.css')}}">
@@ -317,8 +318,9 @@ body .search-input input::placeholder {
                  <span class="text-muted">{{ formation.prix }} TND</span>
                 <div class="d-flex justify-content-between align-items-center">
                     <a href="{{ path('app_formation_show', {'id': formation.idFormation}) }}" class="btn btn-primary">View Details</a>
-                  <a href="{{ path('app_formation_generate_quiz', {'id': formation.idFormation}) }}">Take Quiz</a>
-
+                     {% if quizzes[formation.idFormation]|default(false) %}
+                    <a href="{{ path('handle_quiz', {'idFormation': formation.idFormation}) }}">Take Quiz</a>
+                {% endif %}
                 </div>
             </div>
         </div>
@@ -326,6 +328,20 @@ body .search-input input::placeholder {
     {% endfor %}
 </div>
     </div>
+    <style>
+    .primary-button {
+    background-color:#6f42c1; /* Red shade from your styling */
+    color: #ffffff; /* White text */
+    padding: 8px 16px;
+    border-radius: 5px;
+    border: none;
+    transition: background-color 0.3s;
+    text-decoration: none; /* Removes underline from links */
+}
+</style>
+     <div class="d-flex justify-content-between align-items-center mt-4 mb-4">
+                            <a href="{{ path('app_formation_catalogue') }}" class="btn btn-primary">New Catalogue</a>
+                         </div>
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
             <li class="page-item"><a class="page-link" href="#">Previous</a></li>
@@ -668,6 +684,7 @@ document.getElementById('searchBox').addEventListener('input', function() {
   <script src="{{asset('assets/js/owl-carousel.js')}}"></script>
   <script src="{{asset('assets/js/counter.js')}}"></script>
   <script src="{{asset('assets/js/custom.js')}}"></script>
+  <script src="{{asset('assets/js/index.js')}}"></script>
 
   </body>
 </html>
