--- a/templates/formationBack/baseB.html.twig
+++ b/templates/formationBack/baseB.html.twig
@@ -295,7 +295,9 @@
                                                <div class="main-button">
                                                <a href="{{ path('app_formationB_show', {'idFormation': formation.idFormation}) }}" class="btn btn-primary">View Details</a>
                                                <a href="{{ path('app_formationB_edit', {'idFormation': formation.idFormation}) }}" class="btn btn-primary">Edit</a>
+                                               <a href="{{ path('app_formationB_add_quiz', {'idFormation': formation.idFormation}) }}" class="btn btn-primary">Add Quiz</a>
                                                <a href="{{ path('app_formationB_delete', {'idFormation': formation.idFormation}) }}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this formation?')">Delete</a>
+                                              
                                                </div>
                                              </td>
                                         </tr>
