--- a/templates/formationFront/base.html.twig
+++ b/templates/formationFront/base.html.twig
@@ -318,8 +318,9 @@ body .search-input input::placeholder {
                  <span class="text-muted">{{ formation.prix }} TND</span>
                 <div class="d-flex justify-content-between align-items-center">
                     <a href="{{ path('app_formation_show', {'id': formation.idFormation}) }}" class="btn btn-primary">View Details</a>
-                  <a href="{{ path('handle_quiz', {'idFormation': formation.idFormation}) }}">Take Quiz</a>
-
+                     {% if quizzes[formation.idFormation]|default(false) %}
+                    <a href="{{ path('handle_quiz', {'idFormation': formation.idFormation}) }}">Take Quiz</a>
+                {% endif %}
                 </div>
             </div>
         </div>
